fe: fixed too long text displaying

--- a/fe/src/components/TodoList/components/Task/Task.css
+++ b/fe/src/components/TodoList/components/Task/Task.css
@@ -1,10 +1,3 @@
-.task {
-    overflow-x: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    /*TODO: ellipsis*/
-}
-
 .task__item-icon {
     min-width: auto !important;
 }
